# sdl2-template

./: .gitignore  README.md  meson.build
src/: main.cpp
